# hertzlabs

./: .gitignore  COMMERCIAL.md  LICENSE  README.md  TRADEMARK.md  UPDATES.md
.githooks/: pre-commit
.github/workflows/: deploy-pages.yml  updates-gate.yml
docs/support/: index.html
docs/terms/: index.html
react-native-app/: .env.example  .gitignore  app.json  app.version.json  babel.config.js  index.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
react-native-app/__tests__/: activeSubscriptionSummary.test.ts  aiProtocolParse.test.ts  aiRateLimit.test.ts  audioSync.test.ts  beatHzSlider.test.ts  brainwaveBands.test.ts  breathEnvelope.test.ts  breathPacer.test.ts  channelFrequencies.test.ts  dopplerFieldMath.test.ts  evaluateMathFormula.test.ts  experientialIntent.test.ts  extractJsonText.test.ts  focusChallengeEligibility.test.ts  geminiOutage.test.ts  growth.test.ts  hertzAudioClient.test.ts  inferBeatHz.test.ts  isPremiumUnlocked.test.ts  layoutMode.test.ts  mathModeWavePaths.test.ts  mathRippleSurface.test.ts  paramMapping.test.ts  parseProtocolFromPrompt.test.ts  protocolBreathBinding.test.ts  sessionRecommendation.test.ts  store.test.ts  telemetryMapping.test.ts
react-native-app/android/: build.gradle  settings.gradle
react-native-app/android/app/src/main/cpp/: BinauralOscillator.cpp  BinauralOscillator.h  BreathPacer.h  CMakeLists.txt  HertzAudioEngine.cpp  HertzAudioEngine.h  NativeEngineModeDSP.h  NoiseGenerator.cpp  NoiseGenerator.h  ParameterBox.h
react-native-app/android/app/src/main/cpp/jni/: HertzAudioJni.cpp
react-native-app/android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
react-native-app/docs/: CNAME  apple-app-site-association  index.html
react-native-app/ios/: ExportOptions.plist  HertzLabsProducts.storekit  Podfile  link-assets-manifest.json
react-native-app/patches/: react-native-reanimated+3.19.5.patch  react-native-reanimated+4.4.0.patch
react-native-app/scripts/: attach-iaps-to-version.mjs  audit-asc-review.mjs  audit-play-iap.mjs  audit-revenuecat-setup.mjs  build-mac-designed-for-ipad.sh  build-maccatalyst.sh  build-skia-maccatalyst.sh  bundle-hermes-release.sh  cancel-asc-review.mjs  cancel-asc-version-review.mjs  check-asc-builds.mjs  convert-appstore-screenshots-macos.py  create-promo-codes.mjs  diagnose-play-release.mjs  fix-android-codegen.mjs  fix-asc-review-issues.mjs  release-ios.sh  (+29 more)
scripts/: check-updates-md.mjs  install-git-hooks.sh
swift-app/: .gitignore  HertzAudioEngine.podspec  Package.resolved  Package.swift
(+431 files in other folders)
